force-app/main/default/objects/Asset/fields/AdventureGroup__c.field-meta.xml
<CustomField>
    <fullName>AdventureGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adventure group</label>
    <referenceTo>AdventureGroup__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>