force-app/main/default/objects/Asset/fields/CurrentChapter__c.field-meta.xml
<CustomField>
    <fullName>CurrentChapter__c</fullName>
    <label>Current Chapter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>