force-app/main/default/objects/Asset/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is default?</label>
    <type>Checkbox</type>
</CustomField>