force-app/main/default/objects/Asset/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>