force-app/main/default/objects/Asset/recordTypes/Attribute.recordType-meta.xml
<RecordType>
    <fullName>Attribute</fullName>
    <active>true</active>
    <label>Attribute</label>
</RecordType>