force-app/main/default/objects/Asset/recordTypes/Book.recordType-meta.xml
<RecordType>
    <fullName>Book</fullName>
    <active>true</active>
    <label>Book</label>
</RecordType>