force-app/main/default/objects/Asset/recordTypes/Device.recordType-meta.xml
<RecordType>
    <fullName>Device</fullName>
    <active>true</active>
    <label>Device</label>
</RecordType>